--- a/mkclus/create_aws_insts.yml
+++ b/mkclus/create_aws_insts.yml
@@ -11,7 +11,7 @@
   - name: simple creation
     ec2:
       key_name: dkoleary_aws
-      group: default_ssh
+      group: kubernetes
       instance_type: t2.medium
       image: ami-094720ddca649952f
       region: us-east-2
@@ -23,7 +23,11 @@
       var: ec2.instances[0].public_ip
 
   - name: Add instance(s) public ips to host group
-    add_host: hostname={{item.public_ip}} groups=gec2 ansible_ssh_private_key_file={{kec2}}
+    add_host: 
+      hostname: "{{item.public_ip}}"
+      groups:
+        - gec2
+      ansible_ssh_private_key_file: "{{kec2}}"
     with_items: "{{ ec2.instances }}"
 
 - name: wait 4 host
@@ -47,4 +51,3 @@
   gather_facts: True
   roles: 
     - common
-    - kubernetes
